fix: Copilotレビュー指摘対応（改善度追加、DBクエリ最適化、バリデーション）
- ScoreTrendDtoにimprovementフィールド追加（最初と最後のセッションの差分）
- Repositoryにcutoff条件付きクエリ追加（全件ロード回避）
- Controller daysパラメータに@Min(1)バリデーション追加
- テスト名をlowerCamelCaseに統一、未使用import削除

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>