@@ -1,6 +1,8 @@
 package com.example.FreStyle.usecase;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 import java.sql.Timestamp;
@@ -18,7 +20,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import com.example.FreStyle.dto.ScoreTrendDto;
 import com.example.FreStyle.entity.AiChatSession;
 import com.example.FreStyle.entity.CommunicationScore;
-import com.example.FreStyle.entity.User;
 import com.example.FreStyle.repository.CommunicationScoreRepository;
 
 @ExtendWith(MockitoExtension.class)
@@ -43,7 +44,7 @@ class GetScoreTrendUseCaseTest {
     }
 
     @Test
-    @DisplayName("複数セッションのスコアトレンドを取得する")
+    @DisplayName("複数セッションのスコアトレンドと改善度を取得する")
     void returnsScoreTrendForMultipleSessions() {
         LocalDateTime now = LocalDateTime.now();
         List<CommunicationScore> scores = List.of(
@@ -52,7 +53,7 @@ class GetScoreTrendUseCaseTest {
                 createScore(2, 90, "明瞭性", now.minusDays(2)),
                 createScore(2, 85, "論理性", now.minusDays(2)));
 
-        when(communicationScoreRepository.findByUserIdOrderByCreatedAtDesc(1))
+        when(communicationScoreRepository.findByUserIdAndCreatedAtAfterOrderByCreatedAtDesc(eq(1), any(Timestamp.class)))
                 .thenReturn(scores);
 
         ScoreTrendDto result = useCase.execute(1, 30);
@@ -62,12 +63,13 @@ class GetScoreTrendUseCaseTest {
         assertThat(result.overallAverage()).isCloseTo(81.25, org.assertj.core.data.Offset.offset(0.01));
         assertThat(result.bestSession().sessionId()).isEqualTo(2);
         assertThat(result.bestSession().averageScore()).isCloseTo(87.5, org.assertj.core.data.Offset.offset(0.01));
+        assertThat(result.improvement()).isCloseTo(12.5, org.assertj.core.data.Offset.offset(0.01));
     }
 
     @Test
     @DisplayName("スコアがない場合は空のトレンドを返す")
     void returnsEmptyTrendWhenNoScores() {
-        when(communicationScoreRepository.findByUserIdOrderByCreatedAtDesc(1))
+        when(communicationScoreRepository.findByUserIdAndCreatedAtAfterOrderByCreatedAtDesc(eq(1), any(Timestamp.class)))
                 .thenReturn(Collections.emptyList());
 
         ScoreTrendDto result = useCase.execute(1, 30);
@@ -76,24 +78,23 @@ class GetScoreTrendUseCaseTest {
         assertThat(result.sessionScores()).isEmpty();
         assertThat(result.overallAverage()).isZero();
         assertThat(result.bestSession()).isNull();
+        assertThat(result.improvement()).isNull();
     }
 
     @Test
-    @DisplayName("期間外のスコアは除外される")
-    void excludesScoresOutsidePeriod() {
+    @DisplayName("セッションが1つの場合improvementはnull")
+    void returnsNullImprovementForSingleSession() {
         LocalDateTime now = LocalDateTime.now();
         List<CommunicationScore> scores = List.of(
-                createScore(1, 80, "明瞭性", now.minusDays(5)),
-                createScore(2, 90, "明瞭性", now.minusDays(60)));
+                createScore(1, 80, "明瞭性", now.minusDays(5)));
 
-        when(communicationScoreRepository.findByUserIdOrderByCreatedAtDesc(1))
+        when(communicationScoreRepository.findByUserIdAndCreatedAtAfterOrderByCreatedAtDesc(eq(1), any(Timestamp.class)))
                 .thenReturn(scores);
 
         ScoreTrendDto result = useCase.execute(1, 30);
 
         assertThat(result.totalSessions()).isEqualTo(1);
-        assertThat(result.sessionScores()).hasSize(1);
-        assertThat(result.sessionScores().get(0).sessionId()).isEqualTo(1);
+        assertThat(result.improvement()).isNull();
     }
 
     @Test
@@ -104,7 +105,7 @@ class GetScoreTrendUseCaseTest {
                 createScore(2, 90, "明瞭性", now.minusDays(1)),
                 createScore(1, 80, "明瞭性", now.minusDays(10)));
 
-        when(communicationScoreRepository.findByUserIdOrderByCreatedAtDesc(1))
+        when(communicationScoreRepository.findByUserIdAndCreatedAtAfterOrderByCreatedAtDesc(eq(1), any(Timestamp.class)))
                 .thenReturn(scores);
 
         ScoreTrendDto result = useCase.execute(1, 30);
@@ -114,19 +115,13 @@ class GetScoreTrendUseCaseTest {
     }
 
     @Test
-    @DisplayName("days指定が反映される")
+    @DisplayName("days指定がレスポンスに反映される")
     void respectsDaysParameter() {
-        LocalDateTime now = LocalDateTime.now();
-        List<CommunicationScore> scores = List.of(
-                createScore(1, 80, "明瞭性", now.minusDays(5)),
-                createScore(2, 90, "明瞭性", now.minusDays(10)));
-
-        when(communicationScoreRepository.findByUserIdOrderByCreatedAtDesc(1))
-                .thenReturn(scores);
+        when(communicationScoreRepository.findByUserIdAndCreatedAtAfterOrderByCreatedAtDesc(eq(1), any(Timestamp.class)))
+                .thenReturn(Collections.emptyList());
 
         ScoreTrendDto result = useCase.execute(1, 7);
 
         assertThat(result.days()).isEqualTo(7);
-        assertThat(result.totalSessions()).isEqualTo(1);
     }
 }
